# tech-watch-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  daily-scrape.yml  release.yml
scripts/: bump.sh  lint.sh  new-feature.sh
src/: __init__.py  config.py  filter.py  formatter.py  scraper.py
